results/SVCOMP/specgen/log-URLDecoder01-2024_03_03_22_22_56.txt
public class Main {

    //@ requires arg != null;
    //@ ensures \result <==> (\exists int i; 0 <= i && i < arg.length(); arg.charAt(i) == '+');
    public static boolean f(String arg) {

        String s1 = "some-url+" + arg;

        try {
            String s2 = java.net.URLDecoder.decode(s1, "UTF-8");
            if (!s2.startsWith("some")) {
                return false;
            }
        } catch (java.io.UnsupportedEncodingException e) {
        }
        return true;
    }
}
/home/max/Documents/JMLGPT/tmp/URLDecoder01.java:1: error: class Main is public, should be declared in a file named Main.java
public class Main {
       ^
1 error

// File name: Main.java
public class Main {

    //@ requires arg != null;
    //@ ensures \result <==> (\exists int i; 0 <= i && i < arg.length(); arg.charAt(i) == '+');
    public static boolean f(String arg) {

        String s1 = "some-url+" + arg;

        try {
            String s2 = java.net.URLDecoder.decode(s1, "UTF-8");
            if (!s2.startsWith("some")) {
                return false;
            }
        } catch (java.io.UnsupportedEncodingException e) {
        }
        return true;
    }
}
/home/max/Documents/JMLGPT/tmp/URLDecoder01.java:2: error: class Main is public, should be declared in a file named Main.java
public class Main {
       ^
1 error

// File name: Main.java
public class Main {

    //@ requires arg != null;
    //@ ensures \result <==> (\exists int i; 0 <= i && i < arg.length(); arg.charAt(i) == '+');
    public static boolean f(String arg) {

        String s1 = "some-url+" + arg;

        try {
            String s2 = java.net.URLDecoder.decode(s1, "UTF-8");
            if (!s2.startsWith("some")) {
                return false;
            }
        } catch (java.io.UnsupportedEncodingException e) {
        }
        return true;
    }
}
/home/max/Documents/JMLGPT/tmp/URLDecoder01.java:2: error: class Main is public, should be declared in a file named Main.java
public class Main {
       ^
1 error

// File name: Main.java
public class Main {

    //@ requires arg != null;
    //@ ensures \result <==> (\exists int i; 0 <= i && i < arg.length(); arg.charAt(i) == '+');
    public static boolean f(String arg) {

        String s1 = "some-url+" + arg;

        try {
            String s2 = java.net.URLDecoder.decode(s1, "UTF-8");
            if (!s2.startsWith("some")) {
                return false;
            }
        } catch (java.io.UnsupportedEncodingException e) {
        }
        return true;
    }
}
/home/max/Documents/JMLGPT/tmp/URLDecoder01.java:2: error: class Main is public, should be declared in a file named Main.java
public class Main {
       ^
1 error

